# MGP

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  README.zh.md  SECURITY.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: contract.yml  docs.yml  pre-commit.yml  publish-mgp-client.yml  publish-mgp-gateway.yml  quality.yml  security.yml
adapters/: __init__.py  base.py  memory_utils.py  search_utils.py
adapters/file/: README.md  __init__.py  adapter.py  manifest.json
adapters/graph/: README.md  __init__.py  adapter.py  manifest.json
adapters/lancedb/: README.md  __init__.py  adapter.py  manifest.json
adapters/mem0/: README.md  __init__.py  adapter.py  manifest.json
adapters/memory/: README.md  __init__.py  adapter.py  manifest.json
adapters/oceanbase/: README.md  __init__.py  adapter.py  manifest.json
adapters/postgres/: README.md  __init__.py  adapter.py  manifest.json
adapters/postgres/migrations/: 001_init.sql
adapters/zep/: README.md  __init__.py  adapter.py  client.py  manifest.json  mapper.py
compliance/: README.md  conftest.py  requirements.lock.txt  requirements.txt
compliance/access/: test_access_control.py
compliance/adapters/: test_adapter_compat.py  test_lancedb_adapter.py  test_oceanbase_adapter.py
compliance/audit/: test_audit_contract.py
compliance/conflicts/: test_conflicts.py
compliance/core/: test_core_operations.py
compliance/dedupe/: test_dedupe_upsert.py
compliance/interop/: test_bulk_sync_export.py
compliance/lifecycle/: test_delete_purge.py  test_lifecycle.py  test_protocol_lifecycle.py
compliance/schema/: test_schema_validation.py
compliance/search/: test_search_results.py
docs/: adapter-guide.md  adapters-overview.md  architecture.md  compliance-suite.md  conformance-profiles.md  contributing.md  deployment-guide.md  examples-overview.md  getting-started.md  glossary.md  index.md  landscape.md  mgp-vs-mcp.md  non-goals.md  operator-guide.md  project-overview.md  protocol-reference.md  python-sdk.md  reference-implementation.md  requirements.lock.txt  schema-reference.md  scope.md  security-baseline.md  sidecar-integration.md  when-to-use-mgp.md
docs/zh/: adapter-guide.md  adapters-overview.md  architecture.md  compliance-suite.md  conformance-profiles.md  contributing.md  deployment-guide.md  examples-overview.md  getting-started.md  glossary.md  index.md  landscape.md  mgp-vs-mcp.md  non-goals.md  operator-guide.md  project-overview.md  protocol-reference.md  python-sdk.md  reference-implementation.md  schema-reference.md  scope.md  security-baseline.md  sidecar-integration.md  when-to-use-mgp.md
examples/: 01_write_profile.py  02_search_episodic.py  03_ttl_expiry.py  04_switch_backend.py  05_sdk_only.py  06_gateway_plus_postgres.py  07_sidecar_shadow_mode.py  08_batch_export_import.py  09_task_polling.py  10_audit_query.py  README.md  e2e_demo.py
integrations/: __init__.py  _bridge_helpers.py
integrations/langgraph/: README.md  __init__.py  bridge.py
integrations/langgraph/tests/: test_bridge.py
integrations/minimal_runtime/: README.md  __init__.py  bridge.py
integrations/minimal_runtime/tests/: test_bridge.py
integrations/nanobot/: README.md  __init__.py
integrations/nanobot/demo/: mock_openai_server.py  process_direct_shadow.md  simulated_payload_demo.py
integrations/nanobot/fixtures/: memory_candidate.json  runtime_state.json
openapi/: __init__.py  mgp-openapi.yaml
reference/: README.md  pyproject.toml  requirements.lock.txt  requirements.txt
reference/audit/: __init__.py  sink.py
reference/gateway/: __init__.py  __main__.py  app.py  config.py  http.py  middleware.py  operations.py  router.py  semantics.py  state.py  tasks.py  time_utils.py  validation.py  version.py
reference/gateway/routes/: __init__.py  memory.py  operational.py  protocol.py
reference/policy/: __init__.py  hook.py
schemas/: __init__.py  adapter-manifest.schema.json  async-task.schema.json  audit-event.schema.json  audit-query.request.schema.json  audit-query.response.schema.json  backend-capabilities.schema.json  cancel-task.request.schema.json  cancel-task.response.schema.json  capabilities.response.schema.json  delete-memory.request.schema.json  delete-memory.response.schema.json  error-code.schema.json  expire-memory.request.schema.json  expire-memory.response.schema.json  export.request.schema.json  export.response.schema.json  get-memory.request.schema.json  get-memory.response.schema.json  get-task.request.schema.json  get-task.response.schema.json  import.request.schema.json  import.response.schema.json  initialize.request.schema.json  initialize.response.schema.json  lineage-link.schema.json  memory-candidate.schema.json  memory-content-preference.schema.json  memory-content-procedural-rule.schema.json  memory-content-relationship.schema.json  memory-content-semantic-fact.schema.json  memory-evidence.schema.json  memory-merge-hint.schema.json  memory-object.schema.json  negotiated-capabilities.schema.json  partial-failure.schema.json  policy-context.schema.json  progress-event.schema.json  protocol-capabilities.schema.json  purge-memory.request.schema.json  (+22 more)
scripts/: check_contract_drift.py  gateway_runtime.py  smoke_lancedb_gateway.py  validate_openapi.py  validate_schemas.py
sdk/python/: README.md  pyproject.toml
sdk/python/mgp_client/: __init__.py  async_client.py  auth.py  client.py  context.py  errors.py  pagination.py  retry.py  tasks.py  types.py
sdk/python/mgp_client/models/: __init__.py
sdk/python/tests/: conftest.py  test_async_client.py  test_client.py  test_pagination.py  test_retry.py  test_tasks.py
spec/: README.md  access-control.md  async-operations.md  conflicts.md  core-operations.md  errors.md  extensions.md  http-binding.md  lifecycle.md  protocol-behavior.md  retention.md  runtime-client.md  runtime-write-candidate.md  search-results.md  versioning.md
(+14 files in other folders)
