[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mgp-gateway"
version = "0.1.0"
description = "Reference gateway for the Memory Governance Protocol"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn>=0.34",
  "jsonschema>=4.23",
]
authors = [
  { name = "Zirui Guo" }
]
license = { text = "MIT" }
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: FastAPI",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/hkuds/MGP"
Documentation = "https://hkuds.github.io/MGP/"
Repository = "https://github.com/hkuds/MGP"

[project.optional-dependencies]
postgres = [
  "psycopg[binary]>=3.2",
]
lancedb = [
  "lancedb>=0.27",
]

[project.scripts]
mgp-gateway = "gateway.__main__:main"

[tool.setuptools.packages.find]
where = [".", ".."]
include = ["gateway*", "audit*", "policy*", "adapters*", "schemas*", "openapi*"]

[tool.setuptools.package-data]
"schemas" = ["*.json"]
"openapi" = ["*.yaml"]
"adapters.memory" = ["manifest.json"]
"adapters.file" = ["manifest.json"]
"adapters.graph" = ["manifest.json"]
"adapters.postgres" = ["manifest.json", "migrations/*.sql"]
"adapters.lancedb" = ["manifest.json"]
"adapters.mem0" = ["manifest.json"]
"adapters.zep" = ["manifest.json"]
