[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mgp-client"
version = "0.1.1"
description = "Python client SDK for the Memory Governance Protocol"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.28"
]
authors = [
  { name = "hkuds" }
]
license = { text = "MIT" }
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10",
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov",
]

[project.urls]
Homepage = "https://github.com/hkuds/MGP"
Documentation = "https://hkuds.github.io/MGP/"
Repository = "https://github.com/hkuds/MGP"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["mgp_client*"]

[tool.setuptools.package-data]
"mgp_client" = ["py.typed"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
